mise en place du changement de fragment TERMINE

--- a/App/DrapeauApp/app/src/main/AndroidManifest.xml
+++ b/App/DrapeauApp/app/src/main/AndroidManifest.xml
@@ -16,6 +16,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".FragmentsActivity">
+            <intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
+
+
     </application>
 
 </manifest>
