--- a/App/DrapeauApp/app/build.gradle
+++ b/App/DrapeauApp/app/build.gradle
@@ -40,8 +40,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.fasterxml.jackson.datatype:jackson-datatype-json-org:2.9.1'
     // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.9.1'
+    compile 'com.fasterxml.jackson.core:jackson-annotations:2.9.1'
     // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.1'
-
+    compile 'com.fasterxml.jackson.core:jackson-core:2.9.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
