--- a/App/DrapeauApp/app/src/main/AndroidManifest.xml
+++ b/App/DrapeauApp/app/src/main/AndroidManifest.xml
@@ -25,6 +25,12 @@
 
         </activity>
 
+        <activity android:name=".ResultatActivity">
+            <intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
 
     </application>
 
