--- a/App/DrapeauApp/app/build.gradle
+++ b/App/DrapeauApp/app/build.gradle
@@ -45,5 +45,5 @@ dependencies {
     compile 'com.fasterxml.jackson.core:jackson-core:2.9.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     //library pour l'utlisation d'un gif
-    compile 'com.felipecsl:gifimageview:2.1.0'
+    compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.3'
 }
