--- a/App/DrapeauApp/app/build.gradle
+++ b/App/DrapeauApp/app/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     //library pour l'utlisation d'un gif
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.3'
+    compile 'uk.co.chrisjenx:calligraphy:2.3.0'
 }
